--- a/archive.html
+++ b/archive.html
@@ -321,6 +321,279 @@ font-family: Verdana;">
 
 <br>
 
+
+<center><img src="https://i.imgur.com/gLJhbhk.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>may . 16 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/uCrx8EY.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+here i am with the content i promised last week !!
+i'm glad i'm getting to be productive during quarantine, and i even got a few commissions, but sadly my store is still paused because i can't go to the post office..
+it's hard but i'm trying my best to keep my mind and body healthy, even without the regular walks in the park and much less money in the bank account .....
+many things are happening at once this year, but i am maturing and getting better with it. surprisingly, my mental health has been more stable than ever, i'm learning many things and improving others with this free time !!
+let's try our best to make this time a positive experience <sub><img src="https://i.imgur.com/y5C6v3u.gif"/></sub>
+
+without further ado, let's get to the stuff i made !
+the second episode of poofties is finished, thank you for your patience <font color="#d3a5a5" style="font-size:11px;">♡</font>
+( make sure to watch the first episode <a id="linkbjinho" href="/stories" target="_blank">here</a> first )
+i will try not to take so long to make the next one .. even if ideas appear along the way, i will try to prioritize this project a little more heh
+here it is :</pre>
+<br>
+
+<center>
+<style>
+#media-player {
+	margin-left:-10px;
+	padding:25px;
+	background-image:url(https://i.imgur.com/K9wDyg9.png);
+	background-repeat: no-repeat;
+	width:400px;
+	height:253px;
+}
+
+video {
+	background:#fff;
+	width:396px;
+	height:auto;
+}
+
+button {
+	text-indent:-9999px;
+	width:15px;
+	height:15px;
+	border:none;
+	outline:none;
+	cursor: url(https://i.imgur.com/EZZ5Vol.png), progress;
+	background:transparent url('https://i.imgur.com/Xo2WHU1.png') no-repeat;
+}
+
+.pause { background-position:-19px 0; }
+.stop { background-position:-38px 0; }
+.volume-plus { background-position:-57px 0; }
+.volume-minus { background-position:-76px 0; }
+.mute { background-position:-95px 0; }
+.unmute { background-position:-114px 0; }
+.replay { background-position:-133px 0; }
+
+progress {
+	color:#fff;
+	font-size:8px;
+	font-family:verdana;
+	border-radius: 5px;
+	width:290px;
+	height:6px;
+	border:none;
+	outline:none;
+	margin-right:5px;
+	text-align:left;
+	
+}
+progress::-webkit-progress-bar {
+  background-color: #fff;
+  border-radius: 7px;
+}
+progress::-webkit-progress-value {
+  background-color: #f5e4e8;
+  border-radius: 7px;
+}
+progress::-moz-progress-bar {
+  background-color: #fff;
+  border-radius: 7px;
+}
+progress::-moz-progress-value {
+  background-color: #f5e4e8;
+  border-radius: 7px;
+}
+</style>
+<script>
+document.addEventListener("DOMContentLoaded", function() { initialiseMediaPlayer(); }, false);
+
+var mediaPlayer;
+var playPauseBtn;
+var muteBtn;
+var progressBar;
+
+function initialiseMediaPlayer() {
+	mediaPlayer = document.getElementById('media-video');
+	
+	playPauseBtn = document.getElementById('play-pause-button');
+	muteBtn = document.getElementById('mute-button');
+	progressBar = document.getElementById('progress-bar');
+
+	mediaPlayer.controls = false;
+	
+	mediaPlayer.addEventListener('timeupdate', updateProgressBar, false);
+	
+	mediaPlayer.addEventListener('play', function() {
+		changeButtonType(playPauseBtn, 'pause');
+	}, false);
+	mediaPlayer.addEventListener('pause', function() {
+		changeButtonType(playPauseBtn, 'play');
+	}, false);
+	
+	mediaPlayer.addEventListener('volumechange', function(e) { 
+		if (mediaPlayer.muted) changeButtonType(muteBtn, 'unmute');
+		else changeButtonType(muteBtn, 'mute');
+	}, false);	
+	mediaPlayer.addEventListener('ended', function() { this.pause(); }, false);	
+}
+
+function togglePlayPause() {
+	if (mediaPlayer.paused || mediaPlayer.ended) {
+		changeButtonType(playPauseBtn, 'pause');
+		mediaPlayer.play();
+	}
+	else {
+		changeButtonType(playPauseBtn, 'play');
+		mediaPlayer.pause();
+	}
+}
+
+function stopPlayer() {
+	mediaPlayer.pause();
+	mediaPlayer.currentTime = 0;
+}
+
+function changeVolume(direction) {
+	if (direction === '+') mediaPlayer.volume += mediaPlayer.volume == 1 ? 0 : 0.1;
+	else mediaPlayer.volume -= (mediaPlayer.volume == 0 ? 0 : 0.1);
+	mediaPlayer.volume = parseFloat(mediaPlayer.volume).toFixed(1);
+}
+
+function toggleMute() {
+	if (mediaPlayer.muted) {
+		changeButtonType(muteBtn, 'mute');
+		mediaPlayer.muted = false;
+	}
+	else {
+		changeButtonType(muteBtn, 'unmute');
+		mediaPlayer.muted = true;
+	}
+}
+
+function replayMedia() {
+	resetPlayer();
+	mediaPlayer.play();
+}
+
+function updateProgressBar() {
+	var percentage = Math.floor((100 / mediaPlayer.duration) * mediaPlayer.currentTime);
+	progressBar.value = percentage;
+	progressBar.innerHTML = percentage + '% played';
+}
+
+function changeButtonType(btn, value) {
+	btn.title = value;
+	btn.innerHTML = value;
+	btn.className = value;
+}
+
+function loadVideo() {
+	for (var i = 0; i < arguments.length; i++) {
+		var file = arguments[i].split('.');
+		var ext = file[file.length - 1];
+		if (canPlayVideo(ext)) {
+			resetPlayer();
+			mediaPlayer.src = arguments[i];
+			mediaPlayer.load();
+			break;
+		}
+	}
+}
+
+function canPlayVideo(ext) {
+	var ableToPlay = mediaPlayer.canPlayType('video/' + ext);
+	if (ableToPlay == '') return false;
+	else return true;
+}
+
+function resetPlayer() {
+	progressBar.value = 0;
+	mediaPlayer.currentTime = 0;
+	changeButtonType(playPauseBtn, 'play');
+}
+</script>
+	<div id='media-player'>
+		<video id='media-video' controls poster="https://i.imgur.com/G5OMbgM.png" onclick="this.play()">
+			<source src='https://file.pooftie.me/v/ii.mp4' type='video/mp4'>
+		</video>
+		<div id='media-controls'>
+			<progress id='progress-bar' min='0' max='100' value='0'/>0% played</progress>
+			<button id='replay-button' class='replay' title="replay" onclick='replayMedia();'/>
+			<button id='play-pause-button' class='play' title="play" onclick='togglePlayPause();'/>　
+			<button id='stop-button' class='stop' title="stop" onclick='stopPlayer();'/>
+			<button id='volume-inc-button' title="+ volume" class='volume-plus' onclick='changeVolume("+");'/>　
+			<button id='volume-dec-button' title="- volume" class='volume-minus' onclick='changeVolume("-");'/>　
+			<button id='mute-button' class='mute' title="mute" onclick='toggleMute("true");'/>
+		</div>
+	</div>
+</center><br>
+
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/picnic.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">picnic .mp3</font></a>　
+</center>
+<br><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this one has a lot more dialogues and characters, and i'm very satisfied with the results .. i hope you are enjoying the series <sub><img src="https://i.imgur.com/KOy4puN.gif"/></sub>
+the melody i made is a simple loop but it was necessary not to disturb the dialog, it was a problem last time !!
+in the next episode i'll try to make more cute scenarios like last time. let's see how it comes out ~
+
+now i have two lovely dresses i sewed, after a long time of not sewing anything <sub><sub><img src="https://i.imgur.com/W1wsqcE.gif"/></sub></sub>
+</pre><br><br>
+
+<center><img width="410px" height="auto" src="https://i.imgur.com/Av5dNm1.jpg"/></center>
+<br>
+<center><img width="410px" height="auto" src="https://i.imgur.com/b5fz6eM.jpg"/></center>
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+you might have seen some spoilers of the first dress because i posted pictures of me wearing it last week <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+i made them both based on vintage nightgowns i've seen before, and i actually was going to use them as nightgowns,, but they turned out so cute i couldn't help using them as dresses <sub><sub><img src="https://i.imgur.com/AcVBE5p.gif"/></sub></sub>
+i specially like the embroidered flowers, it was easy to do but took a while to finish.. i don't usually work on large embroidery projects so this was new to me !
+
+well, lastly, i received some requests to post more of my favorite ukagaka
+and people wanting to see my pc updated ( i posted screenshots of my pc a few years ago and always post my phone when decorated )
+and also people wondering how i modify the look of websites..
+so i'm going to show you everything together :</pre><br><br>
+
+<center><img width="410px" height="auto" src="https://i.imgur.com/52bygik.gif"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://file.pooftie.me/r/renai.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">renai .rar</font></a>　</center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+these ukagaka are called "renai" and are absolutely adorable <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+not very hard to find, but well, there they are. enjoy !!
+about the sites .. there is really no secret, i basically insert css into the source code of the sites using the "inspect element" function. you can do this with any site, just explore the source code to find the appearance stuff and that's it.. !
+it takes time and patience, and whenever the site updates the layout you will have to do it all over again, but if you love using beautiful sites like me .. go for it
+i'm not a real expert with the "inspect element" so i suggest you searching for tutorials, it's really useful.
+
+that's it for today, i will take a good nap now <sub><img src="https://i.imgur.com/8IR46FP.gif"/></sub>
+thank you for your support and don't forget to drink water !
+</pre><br>
+xoxo <sub><sub><img src="https://i.imgur.com/1IBk2JR.gif"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/bAE2SKx.gif"/></center>
+
+<br><br><br>
+
+<br>
+
 <center><img src="https://i.imgur.com/5ukeJnS.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
